# swaglab-quality-suite

./: .gitignore  00-LEIA-PRIMEIRO.txt  README.md  RESUMO-DO-PROJETO.txt
.github/workflows/: api-tests.yml  e2e-tests.yml
api/: conftest.py  pyproject.toml  requirements.txt
api/tests/: test_auth.py  test_negative.py  test_posts.py  test_users.py
docs/: escopo.md  estrategia.md  glossario-qa.md  guia-de-revisao.md
e2e/: package-lock.json  package.json  playwright.config.ts  tsconfig.json
e2e/pages/: CartPage.ts  CheckoutPage.ts  CompletePage.ts  InventoryPage.ts  LoginPage.ts
e2e/support/: test-data.ts
e2e/tests/negative/: checkout-errors.spec.ts  login-errors.spec.ts
e2e/tests/problem-users/: error-user.spec.ts  performance-user.spec.ts  problem-user.spec.ts  visual-user.spec.ts
e2e/tests/smoke/: cart.spec.ts  checkout.spec.ts  inventory.spec.ts  login.spec.ts
manual/bug-reports/: BUG-001-problem-user-wrong-images.md  BUG-002-problem-user-lastname-locked.md  BUG-003-error-user-cart-failures.md  BUG-004-error-user-checkout-fields.md  BUG-005-performance-user-login-delay.md  BUG-006-visual-user-layout-issues.md
manual/evidence/screenshots/: .gitkeep
