[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "swaglab-api-tests"
version = "1.0.0"
description = "Testes de API para JSONPlaceholder — portfolio QA swaglab-quality-suite"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27.0",
    "pytest>=8.0.0",
    "pytest-html>=4.0.0",
]

[tool.pytest.ini_options]
# Diretório de testes
testpaths = ["tests"]

# Exibe saída detalhada por padrão
addopts = "-v --tb=short"

# Marcadores personalizados para categorizar os testes
# Permite executar apenas uma categoria com: pytest -m crud
markers = [
    "crud: testes de operações CRUD (Create, Read, Update, Delete)",
    "creation: testes de criação de posts e comentários",
    "negative: testes de cenários negativos e validação de erros",
    "smoke: testes básicos de verificação de sanidade",
]
